# rusty-book-manager

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yml
.github/workflows/: ci.yaml
adapter/: Cargo.toml
adapter/migrations/: 20250423111616_start.down.sql  20250423111616_start.up.sql
adapter/src/: lib.rs
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
adapter/src/repository/fixtures/: common.sql
api/: Cargo.toml
api/src/: extractor.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: id.rs  role.rs
kernel/src/model/book/: mod.rs
kernel/src/model/checkout/: mod.rs
kernel/src/model/user/: event.rs  mod.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
registry/src/: lib.rs
shared/src/: config.rs  env.rs  error.rs  lib.rs
src/: main.rs
