[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["macros"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "macros",
    "postgres",
    "migrate",
] }
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
rstest = "0.25.0"
