[package]
name = "rusty-book-manager"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }

anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["macros"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "macros",
    "postgres",
    "migrate",
] }
tokio = { version = "1.44.2", features = ["full"] }
rstest = "0.25.0"
async-trait = "0.1.88"
derive-new = "0.7.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
secrecy = "0.10.3"
strum = { version = "0.27.1", features = ["derive"] }
mockall = "0.13.1"
redis = { version = "0.30.0", features = ["tokio-rustls-comp"] }
bcrypt = "0.17.0"
itertools = "0.14.0"
tower = "0.5.2"
tracing = { version = "0.1.41", features = ["log"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio-stream = "0.1.17"
garde = { version = "0.22.0", features = ["derive", "email"] }

[dependencies]
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
utoipa.workspace = true
tracing.workspace = true

tower-http = { version = "0.6.2", features = ["cors", "trace"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
# opentelemetry関連は書籍とバージョンを合わせる
opentelemetry = "0.21.0"
tracing-opentelemetry = "0.22.0"
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
