[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
async-trait.workspace = true
uuid.workspace = true
derive-new.workspace = true
chrono.workspace = true
mockall.workspace = true
serde.workspace = true
strum.workspace = true
sqlx.workspace = true

[dev-dependencies]
anyhow.workspace = true
